added banner and card section

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <title>Emergency Service</title>
 </head>
 
-<body style=" font-family: Hind Madurai, sans-serif;">
+<body style=" font-family: Hind Madurai, sans-serif;" class="bg-[#f5fff6]">
 
     <!-- navbar -->
-    <nav class="flex justify-between items-center px-16 py-6">
+    <nav class="flex justify-between items-center px-16 py-6 bg-white">
 
         <!-- left side  -->
 
@@ -58,7 +58,7 @@
     <!-- banner section  -->
 
     <section
-        class="flex flex-col justify-center items-center text-center bg-[linear-gradient(90deg,_rgba(1,49,35,1)_0%,_rgba(0,103,71,1)_50%,_rgba(1,50,35,1)_100%)]  py-4 ">
+        class="flex flex-col justify-center items-center text-center bg-[linear-gradient(90deg,_rgba(1,49,35,1)_0%,_rgba(0,103,71,1)_50%,_rgba(1,50,35,1)_100%)]  py-6 ">
         <img src="./assets/logo-dark.png" class="w-20 " alt="">
         <h2 class="text-2xl font-semibold text-white my-1">Emergency Service Directory</h2>
         <p class="text-xs text-white ">Government Emergency Services at Your Fingertip – A Project by Government of the
@@ -67,41 +67,300 @@
 
     <!-- card section  -->
 
-    <main class="grid grid-cols-12 w-11/12 mx-auto">
+    <main class="grid grid-cols-12 w-11/12 mx-auto my-12 gap-6">
         <!-- card-container -->
-        <section class="card-container col-span-9 grid grid-cols-3 justify-between">
+        <section class="card-container col-span-9 grid grid-cols-3 justify-between gap-4">
 
             <!-- card -->
-            <div class="card p-[1.5rem] ">
-                <div class="flex justify-between items-center">
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
                     <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
                         <img src="./assets/emergency.png" class="w-7 my-2" alt="">
                     </div>
 
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart text-2xl"></i>
                 </div>
                 <div>
                     <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
                     <p class="text-gray-400">National Emergency</p>
                 </div>
-                <div>
-                    <h1 class="text-black font-bold text-2xl">999</h1>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
                 </div>
                 <div class="bg-gray-300 rounded-full w-12 text-center">
                     <h2 class="text-gray-600">ALL</h2>
                 </div>
-                <div class="flex justify-between">
-                    <div>
-                        <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg xl:btn-xl"><i
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
-                    <div>
-                        <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg xl:btn-xl "><i class="fa-regular fa-phone"></i> Call</button>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card -->
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
+                    <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
+                        <img src="./assets/emergency.png" class="w-7 my-2" alt="">
+                    </div>
+
+                    <i class="fa-regular fa-heart text-2xl"></i>
+                </div>
+                <div>
+                    <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
+                    <p class="text-gray-400">National Emergency</p>
+                </div>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                </div>
+                <div class="bg-gray-300 rounded-full w-12 text-center">
+                    <h2 class="text-gray-600">ALL</h2>
+                </div>
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
+                                class="fa-regular fa-copy"></i> Copy</button>
+                    </div>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card -->
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
+                    <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
+                        <img src="./assets/emergency.png" class="w-7 my-2" alt="">
+                    </div>
+
+                    <i class="fa-regular fa-heart text-2xl"></i>
+                </div>
+                <div>
+                    <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
+                    <p class="text-gray-400">National Emergency</p>
+                </div>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                </div>
+                <div class="bg-gray-300 rounded-full w-12 text-center">
+                    <h2 class="text-gray-600">ALL</h2>
+                </div>
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
+                                class="fa-regular fa-copy"></i> Copy</button>
+                    </div>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card -->
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
+                    <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
+                        <img src="./assets/emergency.png" class="w-7 my-2" alt="">
+                    </div>
+
+                    <i class="fa-regular fa-heart text-2xl"></i>
+                </div>
+                <div>
+                    <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
+                    <p class="text-gray-400">National Emergency</p>
+                </div>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                </div>
+                <div class="bg-gray-300 rounded-full w-12 text-center">
+                    <h2 class="text-gray-600">ALL</h2>
+                </div>
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
+                                class="fa-regular fa-copy"></i> Copy</button>
+                    </div>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card -->
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
+                    <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
+                        <img src="./assets/emergency.png" class="w-7 my-2" alt="">
+                    </div>
+
+                    <i class="fa-regular fa-heart text-2xl"></i>
+                </div>
+                <div>
+                    <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
+                    <p class="text-gray-400">National Emergency</p>
+                </div>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                </div>
+                <div class="bg-gray-300 rounded-full w-12 text-center">
+                    <h2 class="text-gray-600">ALL</h2>
+                </div>
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
+                                class="fa-regular fa-copy"></i> Copy</button>
+                    </div>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card -->
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
+                    <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
+                        <img src="./assets/emergency.png" class="w-7 my-2" alt="">
+                    </div>
+
+                    <i class="fa-regular fa-heart text-2xl"></i>
+                </div>
+                <div>
+                    <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
+                    <p class="text-gray-400">National Emergency</p>
+                </div>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                </div>
+                <div class="bg-gray-300 rounded-full w-12 text-center">
+                    <h2 class="text-gray-600">ALL</h2>
+                </div>
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
+                                class="fa-regular fa-copy"></i> Copy</button>
+                    </div>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card -->
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
+                    <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
+                        <img src="./assets/emergency.png" class="w-7 my-2" alt="">
+                    </div>
+
+                    <i class="fa-regular fa-heart text-2xl"></i>
+                </div>
+                <div>
+                    <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
+                    <p class="text-gray-400">National Emergency</p>
+                </div>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                </div>
+                <div class="bg-gray-300 rounded-full w-12 text-center">
+                    <h2 class="text-gray-600">ALL</h2>
+                </div>
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
+                                class="fa-regular fa-copy"></i> Copy</button>
+                    </div>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card -->
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
+                    <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
+                        <img src="./assets/emergency.png" class="w-7 my-2" alt="">
+                    </div>
+
+                    <i class="fa-regular fa-heart text-2xl"></i>
+                </div>
+                <div>
+                    <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
+                    <p class="text-gray-400">National Emergency</p>
+                </div>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                </div>
+                <div class="bg-gray-300 rounded-full w-12 text-center">
+                    <h2 class="text-gray-600">ALL</h2>
+                </div>
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
+                                class="fa-regular fa-copy"></i> Copy</button>
+                    </div>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card -->
+            <div class="card p-[1.5rem] w-[23rem] bg-white shadow-xl">
+                <div class="flex justify-between items-center mb-4">
+                    <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
+                        <img src="./assets/emergency.png" class="w-7 my-2" alt="">
+                    </div>
+
+                    <i class="fa-regular fa-heart text-2xl"></i>
+                </div>
+                <div>
+                    <h1 class="text-[1rem] font-semibold text-black">National Emergency Number</h1>
+                    <p class="text-gray-400">National Emergency</p>
+                </div>
+                <div class="mt-6">
+                    <h1 class="text-black font-bold text-2xl mb-1">999</h1>
+                </div>
+                <div class="bg-gray-300 rounded-full w-12 text-center">
+                    <h2 class="text-gray-600">ALL</h2>
+                </div>
+                <div class="flex gap-3 mt-6">
+                    <div class="w-full p-0">
+                        <button
+                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300"><i
+                                class="fa-regular fa-copy"></i> Copy</button>
+                    </div>
+                    <div class="w-full p-0">
+                        <button class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl "><i
+                                class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
             </div>
 
         </section>
+        <!-- right section  -->
         <aside class="call-history col-span-3">
             <h4> <i class="fa-regular fa-clock"></i> Call History</h4>
 
