added html tailwind final page

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
     <!-- card section  -->
 
-    <main class="grid grid-cols-12 w-11/12 mx-auto my-12 gap-1 md:gap-6">
+    <main class="grid grid-cols-12 w-11/12 mx-auto my-12 gap-1 md:gap-5">
         <!-- card-container -->
         <section
-            class="card-container col-span-8 md:col-span-9 grid md:grid-cols-2 lg:grid-cols-3 justify-between gap-4">
+            class="card-container col-span-8 md:col-span-9 grid md:grid-cols-2 lg:grid-cols-3 justify-between gap-3">
 
             <!-- card -->
             <!-- National emergency Number  -->
@@ -90,18 +90,18 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">999</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">All</h2>
                 </div>
                 <div class="flex gap-2 md:gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -124,21 +124,22 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">999</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">Police</h2>
                 </div>
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
+            </div>
             </div>
 
             <!-- card -->
@@ -158,18 +159,18 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">999</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">Fire</h2>
                 </div>
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -192,18 +193,18 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">1994-999999</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">Health</h2>
                 </div>
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -226,18 +227,18 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">109</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">Help</h2>
                 </div>
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -261,18 +262,18 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">106</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">Govt.</h2>
                 </div>
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -283,7 +284,7 @@
             <div class="card p-[1.5rem] lg:max-w-[18rem] bg-white shadow-xl">
                 <div class="flex justify-between items-center mb-4">
                     <div class="bg-[#ffe3e2] w-12 flex items-center justify-center rounded-xl">
-                        <img src="./assets/logo.png" class="w-7 my-2" alt="">
+                        <img src="./assets/Bangladesh_Power_Development_Board_Logo.png" class="w-7 my-2" alt="">
                     </div>
 
                     <i class="fa-regular fa-heart text-2xl"></i>
@@ -295,18 +296,18 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">16216</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-15 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">Electricity</h2>
                 </div>
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -329,18 +330,18 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">16445</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">NGO</h2>
                 </div>
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -363,18 +364,18 @@
                 <div class="mt-6">
                     <h1 class="text-black font-bold text-2xl mb-1">999</h1>
                 </div>
-                <div class="bg-gray-300 rounded-full w-12 text-center">
-                    <h2 class="text-gray-600">ALL</h2>
+                <div class="bg-gray-300 rounded-full max-w-12 text-center ml-2">
+                    <h2 class="text-gray-600 text-xs">Travel</h2>
                 </div>
                 <div class="flex gap-3 mt-6">
                     <div class="w-full p-0">
                         <button
-                            class="p-2 text-gray-500 font-normal rounded-2xl w-full text-xl border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
+                            class="p-2 text-gray-500 font-semibold rounded-lg w-full text-[1rem] border border-gray-300 hover:cursor-pointer hover:bg-blue-100 hover:text-black"><i
                                 class="fa-regular fa-copy"></i> Copy</button>
                     </div>
                     <div class="w-full p-0">
                         <button
-                            class="p-2 bg-[#00a63e] text-white font-normal rounded-2xl w-full text-xl hover:cursor-pointer hover:bg-blue-500 "><i
+                            class="p-2 bg-[#00a63e] text-white font-semibold rounded-lg w-full text-[1rem] hover:cursor-pointer hover:bg-blue-500 "><i
                                 class="fa-solid fa-phone text-white"></i> Call</button>
                     </div>
                 </div>
@@ -387,7 +388,7 @@
                 <h4 class="md:text-[1.25rem] font-semibold"> <i class="fa-regular fa-clock"></i> Call History</h4>
 
                 <button
-                    class="text-xl p-1 md:py-1 md:px-3.5 bg-[#00a63e] text-white rounded-2xl hover:cursor-pointer hover:bg-blue-500 ">Clear
+                    class="text-[1rem] md:text-xl px-2 py-1 md:px-3.5 bg-[#00a63e] text-white rounded-2xl hover:cursor-pointer hover:bg-blue-500 ">Clear
                 </button>
             </div>
 
